Fix color contrast issues

--- a/examples/src/scss/style.scss
+++ b/examples/src/scss/style.scss
@@ -1,8 +1,14 @@
+// Cayman overrides
 $header-bg-color: #3498db;
 $header-bg-color-secondary: #2c3e50;
 $section-headings-color: #3498db;
+$blockquote-text-color: #606c71;
+
+// Checkbox tree overrides
 $rct-color: #444;
 $rct-border-color: #ccc;
+
+// Misc.
 $input-border-color: #ced4da;
 $tree-font-family: "Roboto", sans-serif;
 
